--- a/kirjandus.bib
+++ b/kirjandus.bib
@@ -39,11 +39,13 @@ volume = {42},
 year = {2013}
 }
 @book{Gregory2014,
-author = {Gregory, Ian N. and Geddes, Alistair},
+editor = {Gregory, Ian N. and Geddes, Alistair},
 isbn = {9780253011909},
-title = {{Toward spatial humanities: Historical gis and spatial history}},
+title = {{Toward Spatial Humanities: Historical GIS and Spatial History}},
 url = {https://www.jstor.org/stable/j.ctt16gz7s5},
-year = {2014}
+year = {2014},
+publisher = {Indiana University Press},
+isbn = {9780253011800}
 }
 @article{Moncla2019,
 author = {Moncla, Ludovic and Gaio, Mauro and Joliveau, Thierry and {Le Lay}, Yves Fran{\c{c}}ois and Boeglin, No{\'{e}}mie and Mazagol, Pierre Olivier},
@@ -66,5 +68,17 @@ isbn = {9781118680605},
 booktitle = {A New Companion to Digital Humanities},
 pages = {199--212},
 title = {{Mapping the Geospatial Turn}},
-year = {2015}
+editor = {Schreibman, Susan and Siemens, Ray and Unsworth, John},
+year = {2015},
+publisher = {{Wiley Blackwell}}
+}
+@incollection{Bodenhamer2010,
+author = {David J. Bodenhamer},
+booktitle = {{The Spatial Humanities: GIS and The Future of Humanities Scholarship}},
+title = {{The Potential of Spatial Humanities}},
+pages = {14--30},
+year = {2010},
+editor = {Bodenhamer, David J. and Corrigan, John and Harris, Trevor M.},
+publisher = {{Indiana University Press}},
+isbn = {9780253355058}
 }
