--- a/02-seminar.Rmd
+++ b/02-seminar.Rmd
@@ -31,7 +31,7 @@ Lisage [virtuaalsele tahvlile](https://padlet.com/maarjaliisapilvik/geohumprojek
 - võimalusel visuaalset lisamaterjali (nt pilte rakendustest, kaartidest vm).
 
 
-
+<div class="padlet-embed" style="border:1px solid rgba(0,0,0,0.1);border-radius:2px;box-sizing:border-box;overflow:hidden;position:relative;width:100%;background:#F4F4F4"><p style="padding:0;margin:0"><iframe src="https://padlet.com/embed/i4bs2p7npoldwj0w" frameborder="0"  style="width:100%;height:608px;display:block;padding:0;margin:0"></iframe></p><div style="padding:8px;text-align:right;margin:0;"><a href="https://padlet.com?ref=embed" style="padding:0;margin:0;border:none;display:block;line-height:1;height:16px" target="_blank"><img src="https://padlet.net/embeds/made_with_padlet.png" width="86" height="16" style="padding:0;margin:0;background:none;border:none;display:inline;box-shadow:none" alt="Tehtud Padletiga"></a></div></div>
 <!--![Erinevaid projekte](./imgs/padlet_projektid.pdf){width=100% height=700}-->
 
 
@@ -47,7 +47,7 @@ Teine rühm saab **optimistide** rolli: teie arvates on humanitaaria eri suunad 
 
 Koondage [siia](https://padlet.com/maarjaliisapilvik/geohumdebatt2021) võimalikult palju argumente ja lihtsalt arvamusi, näiteid jm, mis teie rühma esindatavat seisukohta toetaksid. Võite sealjuures loomulikult ära kasutada artikleid, guugeldada, aga ka rühma sees ise ideid genereerida.  
 
-
+<div class="padlet-embed" style="border:1px solid rgba(0,0,0,0.1);border-radius:2px;box-sizing:border-box;overflow:hidden;position:relative;width:100%;background:#F4F4F4"><p style="padding:0;margin:0"><iframe src="https://padlet.com/embed/dz33a1tf5gmwx9w7" frameborder="0"  style="width:100%;height:608px;display:block;padding:0;margin:0"></iframe></p><div style="padding:8px;text-align:right;margin:0;"><a href="https://padlet.com?ref=embed" style="padding:0;margin:0;border:none;display:block;line-height:1;height:16px" target="_blank"><img src="https://padlet.net/embeds/made_with_padlet.png" width="86" height="16" style="padding:0;margin:0;background:none;border:none;display:inline;box-shadow:none" alt="Tehtud Padletiga"></a></div></div>
 <!--![Debatt](./imgs/padlet-debatt.pdf){width=100% height=700}-->
 
 
