--- a/kirjandus.bib
+++ b/kirjandus.bib
@@ -82,3 +82,29 @@ editor = {Bodenhamer, David J. and Corrigan, John and Harris, Trevor M.},
 publisher = {{Indiana University Press}},
 isbn = {9780253355058}
 }
+@book{Bolstad2016,
+author = {Bolstad, Paul},
+isbn = {9781506695877},
+title = {{A First Text on Geographic Information Systems, 5th edition}},
+year = {2016},
+publisher = {{Eider Press}}
+}
+@book{Ballas2018,
+author = {Ballas, Dimitris and Clarke, Graham and Franklin, Rachel and Newing, Andy},
+isbn = {9781138785120},
+publisher = {Routledge},
+title = {{GIS and the Social Sciences: Theory and Application}},
+year = {2018}
+}
+@misc{Kaasik2018,
+author = {Kaasik, Ahto},
+title = {{Rüüstatud pühapaigad}},
+url = {http://hiis.ee/files/ryystatud_pyhapaigad_2018.pdf},
+year = {2018}
+}
+@book{Okabe2006,
+author = {Okabe, Atsuyuki},
+publisher = {Taylor & Francis Group},
+title = {{GIS-Based Studies in the Humanities and Social Sciences}},
+year = {2006}
+}
