--- a/kirjandus.bib
+++ b/kirjandus.bib
@@ -108,3 +108,25 @@ publisher = {Taylor & Francis Group},
 title = {{GIS-Based Studies in the Humanities and Social Sciences}},
 year = {2006}
 }
+@misc{Suurna&Sisas2010,
+author = {Suurna, Ranel and Sisas, Eveli},
+title = {{GIS ja kartograafia alused}},
+url = {https://www.digar.ee/arhiiv/nlib-digar:120392},
+year = {2010}
+}
+@incollection{Aunap2019,
+author = {Aunap, Raivo},
+title = {{Geodeetilised alused}},
+booktitle = {{Geoinformaatika}},
+editor = {Roosaare, Jüri and Mõisja, Kiira and Aunap, Raivo},
+pages = {125-182},
+year = {2019},
+publisher = {{Tartu Ülikooli Kirjastus}}
+}
+@article{Pilvik2019,
+author = {Pilvik, Maarja-Liisa and Muischnek, Kadri and Jaanimäe, Gerth and Lindström, Liina and Lust, Kersti and Orasmaa, Siim and Türna, Tõnis},
+journal = {Eesti Rakenduslingvistika Ühingu Aastaraamat, 15},
+pages = {139--158},
+title = {{Möistus sai kuulotedu: 19. sajandi vallakohtuprotokollide tekstidest digitaalse ressursi loomine}},
+year = {2019}
+}
